--- a/src/components/SignUp/signup.scss
+++ b/src/components/SignUp/signup.scss
@@ -4,7 +4,7 @@
     align-items: center;
 }
 .bgImg{
-    background-image: url('../assets/green.jpg'); 
+    background-image: url('../../../public/images/green.jpg'); 
     background-size: cover;
     background-position: center;
 }
