--- a/src/components/reviews/reviewStyle.scss
+++ b/src/components/reviews/reviewStyle.scss
@@ -1,2 +1,36 @@
-.slick-list {margin: 0 -10px;}
-.slick-slide>div {padding: 0 10px;}
+// .slick-list {margin: 0 -10px;}
+// .slick-slide>div {padding: 0 10px;}
+
+// .slider::before,
+// .slider::after{
+//     background: linear-gradient(to right, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+//     content: '';
+//     height: 100%;
+//     position: absolute;
+//     width: 15%;
+//     z-index: 2;
+// }
+
+// .slider::before{
+//     left: 0;
+//     top: 0;
+// }
+// .slider::after{
+//     right: 0;
+//     top: 0;
+//     // transform: rotateZ(100deg);
+// }
+
+.slide-track{
+    animation: scroll 40s linear infinite;
+}
+
+@keyframes scroll {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(calc(-250px*9));
+    }
+    
+}
