Changed File Structure

--- a/frontend/src/components/SignUp/signup.scss
+++ b/frontend/src/components/SignUp/signup.scss
@@ -4,7 +4,7 @@
     align-items: center;
 }
 .bgImg{
-    background-image: url('../../../public/images/green.jpg'); 
+    background-image: url('/images/signup/loginBg.jpg'); 
     background-size: cover;
     background-position: center;
 }
