--- a/frontend/src/components/templates/templateStyle.scss
+++ b/frontend/src/components/templates/templateStyle.scss
@@ -27,6 +27,37 @@
     transition: all .5s ease;
 }
 
+@media (max-width: 640px) {
+    .item {
+        width: 100px;
+        height: 100px;
+        top: 55px;
+        left: 11vw;
+    }
+}
+
+@media (min-width: 640px) {
+    .item {
+        width: 170px;
+        height: 170px;
+        top: 75px;
+        left: 11vw;
+    }
+
+
+}
+
+@media (min-width: 1024px) {
+    .item {
+        width: 270px;
+        height: 270px;
+        top: 120px;
+        left: 0;
+    }
+
+}
+
+
 
 .item:last-child {
     margin-right: 0;
