--- a/frontend/src/components/reviews/reviewStyle.scss
+++ b/frontend/src/components/reviews/reviewStyle.scss
@@ -22,7 +22,7 @@
 // }
 
 .slide-track{
-    animation: scroll 120s linear infinite;
+    animation: scroll 40s linear infinite;
 }
 
 @keyframes scroll {
@@ -30,11 +30,32 @@
         transform: translateX(0);
     }
     50%{
-        transform: translateX(calc(-260px*18));
+        transform: translateX(calc(-300rem));
 
     }
     100%{
         transform: translateX(0);
+    }
+}
+
+
+@media (max-width: 760px) {
+    .slide-track{
+        animation: scroll 60s linear infinite;
+    }
+    
+    @keyframes scroll {
+        0%{
+            transform: translateX(0);
+        }
+        50%{
+            transform: translateX(calc(-2300px));
+    
+        }
+        100%{
+            transform: translateX(0);
+        }
+        
     }
     
 }
