--- a/frontend/src/components/SignUp/signup.scss
+++ b/frontend/src/components/SignUp/signup.scss
@@ -4,7 +4,6 @@
     align-items: center;
 }
 .bgImg{
-    background-image: url('/images/signup/loginBg.jpg'); 
-    background-size: cover;
+    background-image: url('/images/signup/green.jpg');
     background-position: center;
 }
