--- a/frontend/src/components/templates/templateStyle.scss
+++ b/frontend/src/components/templates/templateStyle.scss
@@ -1,15 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .cButton {
     font-size: 4vw;
 
 }
 
 .carousel {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0;
-    margin: 0;
-    transform: translate3d(-80%, -40%, 0);
+    // transform: translate3d(-80%, -40%, 0);
 }
 
 .item {
